Added riak entry and updated projects and about

--- a/source/about.html
+++ b/source/about.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: "about"
-date: 2012-01-20 20:32
-comments: true
+date: 2012-03-01 20:32
+comments: false
 sharing: true
 footer: true
 ---
@@ -11,9 +11,8 @@ footer: true
 <h2>Current</h2>
 <p>
   Currently I am self-employed and working on personal and client-based projects.
-  Previously I worked as a software developer in the <a href="http://taglab.utoronto.ca/">TAG Lab</a>, at the University of Toronto. At the TAG Lab I helped to develope an iOS application to improve reading accessibility for individuals with low vision and those with Multiple Sclerosis. Outside
-  of work I sharpen my skills by creating JavaScript based web applications and delving deeper
-  into programming.
+  Previously I worked as a software developer in the <a href="http://taglab.utoronto.ca/">TAG Lab</a>, at the University of Toronto. At the TAG Lab I helped to develope an iOS application for individuals with low vision and those with Multiple Sclerosis that was featured in <a href="http://www.magazine.utoronto.ca/feature/technologies-for-aging-gracefully-taglab-ronald-baecker-brent-ledger/">U of T Magazine</a> and <a href="http://www.news.utoronto.ca/e-reading-grandma">U of T News</a>. Outside
+  of work I sharpen my skills by creating JavaScript based web applications and contributing to open source projects (<a href="https://github.com/maccman/macgap">MacGap</a>, <a href="https://github.com/jquery/learn.jquery.com"> learn.jquery.com</a>, <a href="https://github.com/tbranyen/backbone-boilerplate">backbone-boilerplate</a>).
 <p>
 
 <h2>Academic</h2>
@@ -38,5 +37,5 @@ footer: true
 <p>
   My eclectic background has meant that I have had to work hard in a lot of different areas, such as writing, 
   presenting and problem solving. In University I observed that good communication was an asset in
-  every subject I studied because it helped me explain myself in presentations, essays and even in code.
+  every subject I studied because it helped me to explain myself in presentations, essays and even in code.
 </p>
