--- a/source/projects.html
+++ b/source/projects.html
@@ -2,10 +2,25 @@
 layout: page
 title: "projects"
 date: 2012-01-20 20:44
-comments: true
+comments: false
 sharing: true
 footer: true
 ---
+
+<div class="row">
+  <div class="col-left">
+    <img src="/images/project_icons/deliveryjs.png" class="project_thumbs">
+  </div>
+  <div class="col-right">
+    <h2>Delivery.js</h2>
+    <h5>JavaScript, HTML5, Socket.IO &amp; Node.js</h5>
+  </div>
+</div>
+<p>
+  Sending files to the server, and pushing files to the client should be as easy as possible. Delivery.js uses Node.js and Socket.IO to make it easy to push files to the client, or send them to the server. Files can be pushed to the client as text (utf8) or base64 (for images and binary files). Delivery.js was featured on <a href="http://javascriptshow.com/episodes/32">episode 32 of the JavaScript Show</a>.<br />
+  <a href="https://github.com/liamks/Delivery.js">Delivery.js on Github</a>
+</p>
+
 
 <div class="row">
   <div class="col-left">
