update blog with spelling fix

--- a/source/about.html
+++ b/source/about.html
@@ -15,7 +15,7 @@ footer: true
 
 </p>
   Previously I worked as a software developer in the <a href="http://taglab.utoronto.ca/">TAG Lab</a>, at the University of Toronto. At the TAG Lab I helped to develope an iOS application for individuals with low vision and those with Multiple Sclerosis that was featured in <a href="http://www.magazine.utoronto.ca/feature/technologies-for-aging-gracefully-taglab-ronald-baecker-brent-ledger/">U of T Magazine</a> and <a href="http://www.news.utoronto.ca/e-reading-grandma">U of T News</a>. Outside
-  of work I sharpen my skills by creating JavaScript based web applications and contributing to open source projects (<a href="https://github.com/maccman/macgap">MacGap</a>, <a href="https://github.com/jquery/learn.jquery.com"> learn.jquery.com</a>, <a href="https://github.com/tbranyen/backbone-boilerplate">backbone-boilerplate</a>).
+  of work I sharpen my skills by creating JavaScript based web applications and contributing to open source projects (<a href="https://github.com/maccman/macgap">MacGap</a>, <a href="https://github.com/jquery/learn.jquery.com"> learn.jquery.com</a>, <a href="https://github.com/tbranyen/backbone-boilerplate">backbone-boilerplate</a>, <a href="https://github.com/gruntjs/grunt-contrib">grunt-contrib</a>).
 <p>
 
 <h2>Academic</h2>
