--- a/source/_posts/2012-11-09-stripe-would-be-perfect-if.html
+++ b/source/_posts/2012-11-09-stripe-would-be-perfect-if.html
@@ -6,7 +6,7 @@ comments: true
 ---
 
 <p>
-I was among many Canadian developers that was happy to hear that Stripe had come to Canada. We were planning on adding subscriptions to <a href="https://understoodit.com">Understoodit.com</a>, so the timing couldn’t have been better. We assumed that it would take a couple of days to integrate Stripe, but it actually took <a href="https://twitter.com/davidmisshula">@davidmisshula</a> and I, 7 days. The process gave me some insights that I thought I’d share.
+I was among many Canadian developers who where happy to hear that Stripe had come to Canada. We were planning on adding subscriptions to <a href="https://understoodit.com">Understoodit.com</a>, so the timing couldn’t have been better. We assumed that it would take a couple of days to integrate Stripe, but it actually took <a href="https://twitter.com/davidmisshula">@davidmisshula</a> and me 7 days. The process gave me some insights that I thought I’d share.
 </p>
 <p>
 I’ve heard that Stripe is significantly easier to integrate than its competitors, however, having never integrated a payment system I have no comparison. Overall I think Stripe is excellent and I’m glad we chose it, however, there are 4 areas, that if improved, would make Stripe perfect: 1) getting started, 2) taxes, 3) invoices and 4) edge cases.
