--- a/source/_posts/2012-11-21-why-you-should-be-nice-to-your-customers.html
+++ b/source/_posts/2012-11-21-why-you-should-be-nice-to-your-customers.html
@@ -5,7 +5,7 @@ date: 2012-11-21
 comments: true
 ---
 <p>
-Being nice to your customers seems like a no brainer. It makes perfect business since: happy customers are less likely to stop using your service and more likely to refer your service to their friends. However, there is another significant reason that being nice pays off. 
+Being nice to your customers seems like a no brainer. It makes perfect business sense: happy customers are less likely to stop using your service and more likely to refer your service to their friends. However, there is another significant reason that being nice pays off. 
 </p>
 <p>
 Running a startup can be a tough slog. You’re unsure if people like what you're building enough for it to be successful. If you get some traction there will be people out there that will belittle your idea, or your execution. With all the unknowns, and the not-always-constructive criticism, it’s incredibly refreshing to interact with a nice customer that loves your product. 
