--- a/source/_posts/2013-05-13-understanding-angularjs-directives-part1-ng-repeat-and-compile.html
+++ b/source/_posts/2013-05-13-understanding-angularjs-directives-part1-ng-repeat-and-compile.html
@@ -67,7 +67,7 @@ app.directive('lk-repeat', function(){
     transclude : 'element',
     compile : function(element, attr, linker){
       return function($scope, $element, $attr){
-        var myLoop = $attr.myLoop,
+        var myLoop = $attr.lkRepeat,
             match = myLoop.match(/^\s*(.+)\s+in\s+(.*?)\s*(\s+track\s+by\s+(.+)\s*)?$/),
             indexString = match[1],
             collectionString = match[2],
