--- a/source/_posts/2013-05-13-understanding-angularjs-directives-part1-ng-repeat-and-compile.html
+++ b/source/_posts/2013-05-13-understanding-angularjs-directives-part1-ng-repeat-and-compile.html
@@ -40,11 +40,11 @@ app.directive('person', function(){
 ```
 
 ```html Result
-<h1>A Person</h1><div ng-transclude><div person>Ted</div></div>
+<h1>A Person</h1><div ng-transclude><span class="ng-scope">Ted</span></div>
 ```
 
 <p>
-  In the above example <code>transclude : true</code> tells Angular to take the contents of the DOM element, using this directive, and insert them into the person's template. To specify where in the template the HTML will be transcluded include <code>ng-transclude</code> in the template.
+  In the above example <code>transclude : true</code> tells Angular to take the contents of the DOM element, using this directive, and insert them into the person's template. To specify where in the template the HTML will be transcluded include <code>ng-transclude</code> in the template. The span, with class <code>ng-scope</code> is inserted by AngularJS.
 </p>
 
 <p>
@@ -62,7 +62,7 @@ app.directive('person', function(){
 ```javascript
 var app = angular.module('myApp',[]);
 
-app.directive('lk-repeat', function(){
+app.directive('lkRepeat', function(){
   return {
     transclude : 'element',
     compile : function(element, attr, linker){
