new blog post on linux source and tokens

--- a/source/_posts/2013-02-27-adding-real-time-to-a-restful-rails-app.html
+++ b/source/_posts/2013-02-27-adding-real-time-to-a-restful-rails-app.html
@@ -156,6 +156,11 @@ app.collections.Books = Backbone.Collection.extend({
 </p>
 
 <h2>Alternatives To The Above</h2>
+<h3>[update July 2014]: Realtime Rails Gem</h3>
+<p>
+  Mike Atlas created a <a href="http://mikeatlas.github.io/realtime-rails/">realtime gem</a> which does all the above with minimal setup.
+</p>
+
 <h3>SockJS</h3>
 <p>
   Socket.IO could be swapped for <a href="https://github.com/sockjs/sockjs-client">SockJS</a>, which uses a similar API to websockets. I've heard from several individuals that it's significantly more stable than the current version of Socket.IO and it's currently <a href="https://github.com/meteor/meteor/tree/master/packages/stream">used by Meteor</a>.
