--- a/source/_posts/2014-08-05-smily-faces-in-linux-source-code.html
+++ b/source/_posts/2014-08-05-smily-faces-in-linux-source-code.html
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: "Smiley Faces in Linux Source Code"
+title: "Smiley Faces in Linux Source Code and Token Statistics"
 date: 2014-08-05
 comments: true
 ---
 
 <p>
-  Github uses Linguist, a Ruby library, to help detect which programming  language is in a given file. Recently, an issue was filed that indicated that Linguist incorrectly classifies Mercury (a programming language) files as Objective-c since they both use the same extension (.m). Linguist’s primary method for language detection is a file’s extension - a method that fell short for Mercury. If Mercury were added to Linguist, then their would be two languages with the same extension - and this is where things get interesting. If two languages share the same extension, or the file does not have an extension, Linguist has 3 methods for guessing the language. First it checks if the file has a shebang (<code>#!/bin/sh</code>). If there is no shebang the second method it uses is a set of <a href="https://github.com/github/linguist/blob/master/lib/linguist/heuristics.rb">heuristics</a>. For instance, if the file includes the “:-” token it concludes that the contents are prologue code, or if “defun” is present it’s common lisp. If it still hasn’t found a match the third method it uses is a <a href="https://github.com/github/linguist/blob/master/lib/linguist/classifier.rb">Bayesian classifier</a>. Roughly speaking the classifier iterates over all of a file’s tokens, and for each token determines the probability that it is present in each programming language. Subsequently, it sums all those probabilities, sorts the results, and returns an array of language-probability pairs (e.g <code>[[‘Ruby’, 0.8], [‘Python’, 0.2]]</code>). 
+  Github uses <a href="https://github.com/github/linguist">Linguist</a>, a Ruby library, to help detect which programming language is in a given file. Recently, an issue was filed that indicated that Linguist incorrectly classifies Mercury (a programming language) files as Objective-c since they both use the same extension (.m). Linguist’s primary method for language detection is a file’s extension - a method that fell short for Mercury. If Mercury were added to Linguist, then their would be two languages with the same extension - and this is where things get interesting. If two languages share the same extension, or the file does not have an extension, Linguist has 3 methods for guessing the language. First it checks if the file has a shebang (<code>#!/bin/sh</code>). If there is no shebang the second method it uses is a set of <a href="https://github.com/github/linguist/blob/master/lib/linguist/heuristics.rb">heuristics</a>. For instance, if the file includes the “:-” token it concludes that the contents are prologue code, or if “defun” is present it’s common lisp. If it still hasn’t found a match the third method it uses is a <a href="https://github.com/github/linguist/blob/master/lib/linguist/classifier.rb">Bayesian classifier</a>. Roughly speaking the classifier iterates over all of a file’s tokens, and for each token determines the probability that it is present in each programming language. Subsequently, it sums all those probabilities, sorts the results, and returns an array of language-probability pairs (e.g <code>[[‘Ruby’, 0.8], [‘Python’, 0.2]]</code>). 
 </p>
 
 <p>
@@ -21,7 +21,7 @@ comments: true
 
 <h3>Tokenizing The Code</h3>
 <p>
-  First, a list of common programming tokens (eg: <code>; , . ( )</code>, etc) was created - tokens that would be found in many of the 10 languages of interest. Using those tokens I created a tokenizer that would output an object with the keys being tokens and their values being the number of times that the token occurred in the file. Base 10 numbers, base 8 numbers, strings (double quotes) and ‘characters’ (single quotes) were treated as 4 different token types. This was done so the number 8 was not treated as a different token from the number 44 (they are both tokenized as “numbers”). 
+  First, a list of common programming tokens (eg: <code>; , . ( )</code>, etc) was created - tokens that would be found in many of the 10 languages of interest. Using those tokens I created a tokenizer that would output an object with the keys being tokens and their values being the number of times that the token occurred in the file. Base 10 numbers, hex numbers, strings (double quotes) and ‘characters’ (single quotes) were treated as 4 different token types. This was done so the number 8 was not treated as a different token from the number 44 (they are both tokenized as “numbers”). 
 </p>
 
 <p>
@@ -120,6 +120,9 @@ comments: true
   </p>
 </div>
 
+<p>
+  Table 2 shows the top 20 tokens and their ratios (token/all tokens in a given file) in 16 different file types. Not surprisingly JSON files lead the pack for double quoted strings, curly brackets, colons and commas. Likewise, Clojure leads by having the highest proportion of parentheses. The right arrow <code>-></code> occurred most often in Php, C and Haskell. Finally, square brackets were very prevalent in Objective-C.
+</p>
 
 <div class="table table-large table-alternate table-fixed" style="overflow:scroll;">
   <h2>Table 2. Top 20 Tokens (Scroll Right For Full Table)</h2>
@@ -149,7 +152,7 @@ comments: true
       <th>Strings (SQ)</th>
     </tr>
     <tr>
-      <td>.php</td><td>10289</td><td>0.0106</td><td>0.0280</td><td>0.0634</td><td>0.0632</td><td>0.0406</td><td>0.0000</td><td>0.0463</td><td>0.0257</td><td>0.0172</td><td>0.0054</td><td>0.0219</td><td>0.0218</td><td>0.0187</td><td>0.0077</td><td>0.0239</td><td>0.0004</td><td>0.0042</td><td>0.0042</td><td>0.0126</td><td>0.0375</td>
+      <td>.php</td><td>10289</td><td>0.0106</td><td>0.0280</td><td>0.0634</td><td>0.0632</td><td>0.0406</td><td>0.0000</td><td>0.0463</td><td>0.0257</td><td>0.0172</td><td>0.0054</td><td>0.0219</td><td>0.0218</td><td>0.0187</td><td>0.0077</td><td class="largest">0.0239</td><td>0.0004</td><td>0.0042</td><td>0.0042</td><td>0.0126</td><td>0.0375</td>
     </tr>
     <tr>
       <td>.json</td><td>1002</td><td>0.0183</td><td class="largest">0.1510</td><td>0.0001</td><td>0.0001</td><td>0.0000</td><td>0</td><td>0.0001</td><td>0.0011</td><td>0.0001</td><td class="largest">0.3575</td><td class="largest">0.0927</td><td class="largest">0.0930</td><td>0.0000</td><td class="largest">0.2163</td><td>0</td><td>0.0001</td><td>0.0179</td><td>0.0179</td><td>0.0001</td><td>0.0001</td>
@@ -167,7 +170,7 @@ comments: true
       <td>.css</td><td>701</td><td class="largest">0.0811</td><td>0.0212</td><td>0.0083</td><td>0.0083</td><td class="largest">0.0676</td><td>0.0000</td><td>0.0219</td><td>0.0564</td><td>0.0023</td><td>0.0050</td><td>0.0392</td><td>0.0394</td><td>0.0169</td><td>0.0779</td><td>0</td><td>0.0194</td><td>0.0011</td><td>0.0011</td><td>0.0001</td><td>0.0018</td>
     </tr>
     <tr>
-      <td>.js</td><td>9089</td><td>0.0290</td><td>0.0681</td><td>0.0646</td><td>0.0639</td><td>0.0436</td><td>0.0005</td><td>0.0075</td><td>0.0574</td><td class="largest">0.0239</td><td>0.0328</td><td>0.0226</td><td>0.0220</td><td>0.0043</td><td>0.0203</td><td>0.0000</td><td>0.0004</td><td>0.0086</td><td>0.0086</td><td>0.0013</td><td>0.0251</td>
+      <td>.js</td><td>9089</td><td>0.0290</td><td>0.0681</td><td>0.0646</td><td>0.0639</td><td>0.0436</td><td>0.0005</td><td>0.0075</td><td>0.0574</td><td>0.0239</td><td>0.0328</td><td>0.0226</td><td>0.0220</td><td>0.0043</td><td>0.0203</td><td>0.0000</td><td>0.0004</td><td>0.0086</td><td>0.0086</td><td>0.0013</td><td>0.0251</td>
     </tr>
     <tr>
       <td>.py</td><td>3081</td><td>0.0211</td><td>0.0483</td><td>0.0539</td><td>0.0537</td><td>0.0008</td><td>0.0001</td><td>0.0024</td><td>0.0670</td><td>0.0364</td><td>0.0213</td><td>0.0018</td><td>0.0018</td><td>0.0003</td><td>0.0278</td><td>0.0000</td><td class="largest">0.0294</td><td>0.0092</td><td>0.0093</td><td>0.0008</td><td>0.0376</td>
@@ -288,7 +291,10 @@ comments: true
   It is not surprising that ratios of token types can differ dramatically between different languages, however, I was surprised that several tokens (parenthesis, square &amp; curly brackets) did not occur equally. While smiley faces can account for part of this discrepancy, they most likely do not account for all of it.  
 </p>
 <p>
-  The biggest surprise was that number of smiley faces per file was not statistically different between JavaScript and C. Being low level I presumed that C code would be more serious, with fewer ascii faces. Interestingly, I was wrong and C code has the similar amount of smiley faces relative to JavaScript.
+  The biggest surprise was that number of smiley faces per file was not statistically different between JavaScript and C. Being low level I presumed that C code would be more serious, with fewer ascii faces. Interestingly, I was wrong and C code has a similar amount of smiley faces relative to JavaScript.
+</p>
+<p>
+  Viewing Table 2 we can start to see some patterns and differences in token ratios that might help to predict a file's language. For instance, JSON has very different token ratios than C. In the next article I will explore the power that tokens have in predicting which programming language is being used in a given file.
 </p>
 <p>
   If you're interested in replicating the analysis, or obtaining the dataset, please see the links below:
